# quantum-stack

./: .gitignore  .mailmap  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUTUREPLAN.md  INTEGRATION.md  LICENSE  README.md  SECURITY.md
common/cli/: CMakeLists.txt
common/cli/lib/: Flags.cpp  Manifest.cpp  Providers.cpp  Submit.cpp
common/cli/tests/: CMakeLists.txt  flags_test.cpp
docs/site/: mkdocs.yml  pyproject.toml
docs/site/content/: authors.md  changelog.md  chips_unsupported.md  faq.md  futureplan.md  index.md  plan.md  progress.md  quickstart.md  vision.md
phonon/: CMakeLists.txt  README.md
phonon/bench/: README.md  bench.py
phonon/cli/: CMakeLists.txt  phononc_main.cpp
phonon/dialect/: CMakeLists.txt
phonon/dialect/lib/: Builder.cpp  Parse.cpp  Phonon.cpp  Print.cpp  Verify.cpp
phonon/dialect/td/: PhononDialect.td  PhononOps.td  PhononTypes.td
phonon/lower/: CMakeLists.txt
phonon/lower/lib/: Lowering.cpp
phonon/optimizer/: CMakeLists.txt
phonon/optimizer/lib/: Optimizer.cpp  Pipeline.cpp  Synthesizer.cpp  ZxSimplifier.cpp
phonon/parser/: CMakeLists.txt
phonon/parser/cpp/: CMakeLists.txt
phonon/tests/corpus/: bell_pair_func.phn  qft_loop.phn  teleportation.phn
phonon/tests/m1/: CMakeLists.txt  builder_test.cpp  print_golden_test.cpp  round_trip_test.cpp  verify_test.cpp
phonon/tests/m2/: CMakeLists.txt  containment_test.cpp  error_test.cpp  structured_test.cpp
phonon/tests/m3/: CMakeLists.txt  corpus_test.cpp  linear_test.cpp
phonon/tests/m4/: CMakeLists.txt  lower_test.cpp  pipeline_test.cpp
phonon/tests/m5/: CMakeLists.txt  cancel_test.cpp  merge_test.cpp  pipeline_test.cpp
phonon/tests/m6/: CMakeLists.txt  borrowed_test.cpp
phonon/tests/m7/: CMakeLists.txt  e2e_test.cpp  swap_test.cpp
phonon/types/: CMakeLists.txt
phonon/types/lib/: LinearTypeChecker.cpp
photon/: CMakeLists.txt  README.md
photon/bindings/: CMakeLists.txt
photon/bindings/lib/: Engine.cpp
photon/bindings/python/: Module.cpp  README.md  pyproject.toml
photon/cli/: CMakeLists.txt  photonc_main.cpp
photon/frontends/cpp/: CMakeLists.txt
photon/lang/: CMakeLists.txt
photon/tests/corpus/: bell.pho  bell_kernel.pho  for_loop.pho  ghz.pho  if_else.pho  lib_bell.pho  lib_ghz.pho  lib_grover.pho  lib_qft.pho  lib_teleport.pho  lib_vqe.pho  search_kernel.pho
photon/tests/m1/: CMakeLists.txt  builder_test.cpp  e2e_test.cpp  lower_test.cpp  parser_test.cpp
photon/tests/m2/: CMakeLists.txt  lib_test.cpp
photon/tests/m3/: CMakeLists.txt  cpp_engine_test.cpp  py_engine_test.py
photon/tests/m4/: CMakeLists.txt  decorator_test.py  translator_test.py
photon/tests/m5/: CMakeLists.txt  ingest_test.cpp  photonc_cli_test.cpp
photon/tests/m6/: CMakeLists.txt  convergence_test.cpp  three_door_test.py
platform/calibration/: README.md  pyproject.toml
platform/calibration/tests/: conftest.py
platform/jobsvc/: README.md  pyproject.toml
platform/jobsvc/alembic/: env.py
platform/jobsvc/tests/: conftest.py
platform/launcher/: README.md  pyproject.toml
spinor/: CMakeLists.txt  README.md
spinor/cli/: CMakeLists.txt  spinorc_main.cpp
spinor/dialect/: CMakeLists.txt
spinor/dialect/lib/: Parse.cpp  Print.cpp  Spinor.cpp  Verify.cpp
spinor/dialect/mlir/: SpinorMLIR.cpp
spinor/dialect/td/: SpinorDialect.td  SpinorOps.td  SpinorTypes.td
spinor/emit/: CMakeLists.txt
spinor/emit/lib/: Qasm3.cpp  Qir.cpp  QiskitPython.cpp  Quil.cpp
spinor/parser/cpp/: CMakeLists.txt
spinor/parser/qasm/: CMakeLists.txt
spinor/passes/: CMakeLists.txt
spinor/passes/lib/: Cleanup.cpp  Collect2qBlocks.cpp  CommutativeCancellation.cpp  Complex2x2.h  ConsolidateBlocks.cpp  CouplingGraph.cpp  Decomposition.cpp  KakResynthesis.cpp  OneQubitEulerResynthesis.cpp  OptimizationLevel.cpp  OptimizationLoop.cpp  PassManager.cpp  Placement.cpp  Routing.cpp  SynthesisTraits.cpp  TwoQubitDecomposer.cpp  VF2PostLayout.cpp
spinor/registry/: CMakeLists.txt
spinor/registry/chips/: alicebob_boson_4.yaml  anyon_yukon.yaml  aqt_pine.yaml  ibm_aachen.yaml  ibm_berlin.yaml  ibm_boston.yaml  ibm_brisbane.yaml  ibm_fez.yaml  ibm_heron_r2.yaml  ibm_heron_r3.yaml  ibm_kingston.yaml  ibm_marrakesh.yaml  ibm_miami.yaml  ibm_nighthawk_r1.yaml  ibm_osprey.yaml  ibm_pittsburgh.yaml  ibm_sherbrooke.yaml  ibm_torrino.yaml  ionq_aria_1.yaml  ionq_aria_proto.yaml  ionq_forte.yaml  ionq_forte_enterprise.yaml  ionq_harmony.yaml  ionq_tempo.yaml  iqm_emerald.yaml  iqm_garnet.yaml  oqc_toshiko.yaml  qci_aqumen.yaml  quantinuum_h1_1.yaml  quantinuum_h2_1.yaml  quantinuum_helios.yaml  rigetti_ankaa_2.yaml  rigetti_ankaa_3.yaml  rigetti_ankaa_9q_3.yaml  tii_falcon.yaml
spinor/registry/lib/: Loader.cpp  Yaml.cpp  Yaml.h
spinor/registry/topologies/: all_to_all.yaml  heavy_hex_127.yaml  heavy_hex_133.yaml  heavy_hex_156.yaml  heavy_hex_433.yaml  kagome_32.yaml  square_grid_120.yaml  square_grid_20.yaml  square_grid_54.yaml  square_grid_82.yaml  square_grid_84.yaml  square_grid_9.yaml
spinor/sim/: CMakeLists.txt
spinor/sim/lib/: Simulator.cpp
spinor/submit/: CMakeLists.txt
spinor/submit/lib/: LocalProvider.cpp
spinor/submit/python/: README.md  pyproject.toml
spinor/tests/corpus/: bell.spn  ghz.spn  malformed_bad_gate.spn  malformed_brackets.spn  malformed_no_target.spn  mid_circuit.spn  native_ibm.spn  native_ionq.spn  rotations.spn
spinor/tests/m1/: CMakeLists.txt  builder_test.cpp  inspector.cpp  print_golden_test.cpp  round_trip_test.cpp  verify_test.cpp
spinor/tests/m10/: CMakeLists.txt  m10_test.cpp
spinor/tests/m11/: CMakeLists.txt  m11_test.cpp
spinor/tests/m3/: CMakeLists.txt  verifier_test.cpp
spinor/tests/m4/: CMakeLists.txt  loader_test.cpp  yaml_test.cpp
spinor/tests/m5/: CMakeLists.txt  m5_test.cpp
spinor/tests/m6/: CMakeLists.txt  m6_test.cpp
spinor/tests/m7/: CMakeLists.txt  inspector.cpp  m7_test.cpp
spinor/tests/m8/: CMakeLists.txt  m8_test.cpp
spinor/tests/m9/: CMakeLists.txt  m9_test.cpp
spinor/tests/parity/: README.md  requirements.txt  run_parity.py  run_qiskit_emit.py  (+4 more)
spinor/verify/: CMakeLists.txt
(+515 files in other folders)
