[project]
name = "heisenberg-docs"
version = "0.5.0"
description = "Build dependencies for the Heisenberg quantum-stack docs site"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Nimesh Cheedella", email = "chnimesh0808@gmail.com" }]

# Pinned upstream 2026-06-16. mkdocs-material 9.7.x is in maintenance
# through Nov 2026 (Material upstream's published timeline).
dependencies = [
  "mkdocs>=1.6,<2.0",
  "mkdocs-material==9.7.6",
  "mkdocstrings==1.0.4",
  "mkdocstrings-python==2.0.4",
  "pymdown-extensions>=10.7,<11",
  "mkdocs-section-index>=0.3.9",
  "mkdocs-glightbox>=0.4.0",
  "mkdocs-redirects>=1.2,<2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This is a docs-build environment, not a Python package — disable
# auto-discovery so `pip install` doesn't try to import sources.
py-modules = []
