[project]
name = "calibration"
version = "0.4.0+phased.m0"
description = "Phase D nightly calibration refresh service"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

dependencies = [
  "apscheduler>=3.10,<4.0",
  "httpx>=0.27,<1.0",
  "structlog>=24,<26",
  "pyyaml>=6.0,<7.0",
  "sqlalchemy>=2.0,<2.1",
  "asyncpg>=0.29,<1.0",
  "pydantic>=2.7,<3.0",
  "prometheus-client>=0.20,<0.22",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2,<10",
  "pytest-asyncio>=0.23,<1.0",
  "freezegun>=1.5,<2.0",
  "respx>=0.21,<1.0",
]

[project.scripts]
calibration = "calibration.main:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
