[project]
name = "calibration"
description = "Heisenberg Quantum Stack — nightly calibration refresh service"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Nimesh Cheedella", email = "chnimesh0808@gmail.com" }]
keywords = ["quantum", "calibration", "apscheduler", "heisenberg"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version"]

dependencies = [
  "apscheduler>=3.10,<4.0",
  "httpx>=0.27,<1.0",
  "structlog>=24,<26",
  "pyyaml>=6.0,<7.0",
  "sqlalchemy>=2.0,<2.1",
  "asyncpg>=0.29,<1.0",
  "aiosqlite>=0.20,<1.0",
  "pydantic>=2.7,<3.0",
  "prometheus-client>=0.20,<0.22",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2,<10",
  "pytest-asyncio>=0.23,<1.0",
  "freezegun>=1.5,<2.0",
  "respx>=0.21,<1.0",
]

[project.scripts]
calibration = "calibration.main:run"

[project.urls]
Homepage = "https://nimesh08.github.io/quantum-stack/"
Repository = "https://github.com/nimesh08/quantum-stack"
Documentation = "https://nimesh08.github.io/quantum-stack/"
Issues = "https://github.com/nimesh08/quantum-stack/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { file = ["../../VERSION"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
