[project]
name = "jobsvc"
version = "0.4.0+phased.m0"
description = "Phase D job service: FastAPI front for the Photon/Phonon/Spinor compiler engine"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Heisenberg Research" }]

# Pinned versions (re-verified upstream 2026-06-16). Bumps go through
# docs/build/phaseD_decisions.md and CI must stay green.
dependencies = [
  "fastapi==0.137.1",
  "uvicorn[standard]>=0.34,<0.35",
  "sqlalchemy>=2.0,<2.1",
  "asyncpg>=0.29,<1.0",
  "alembic>=1.13,<2.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "apscheduler>=3.10,<4.0",
  "python-jose[cryptography]>=3.3,<4.0",
  "passlib[bcrypt]>=1.7.4,<2.0",
  "bcrypt>=3.2,<4.1",
  "structlog>=24,<26",
  "prometheus-client>=0.20,<0.22",
  "httpx>=0.27,<1.0",
  "pyyaml>=6.0,<7.0",
  "python-multipart>=0.0.9",
  # spinor_submit (Phase A adapter) is installed alongside via
  # `pip install -e ../../spinor/submit/python` (or COPY in the
  # Dockerfile). It is optional at import time — local provider
  # works without it.
]

[project.optional-dependencies]
test = [
  "pytest>=8.2,<10",
  "pytest-asyncio>=0.23,<1.0",
  "pytest-cov>=5.0,<7.0",
  "freezegun>=1.5,<2.0",
  "respx>=0.21,<1.0",
  "testcontainers[postgres]>=4.5,<5.0",
]

[project.scripts]
jobsvc = "jobsvc.main:run"
jobsvc-worker = "jobsvc.worker:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
  "integration: requires a running Postgres",
  "regression: frozen end-to-end behaviour",
]
