[project]
name = "jobsvc"
description = "Heisenberg Quantum Stack — FastAPI surface for the Photon/Phonon/Spinor compiler engine"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Nimesh Cheedella", email = "chnimesh0808@gmail.com" }]
keywords = ["quantum", "compiler", "fastapi", "spinor", "phonon", "photon", "heisenberg"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version"]

# Pinned versions (re-verified upstream 2026-06-16). Bumps go through
# docs/build/phaseD_decisions.md and CI must stay green.
dependencies = [
  "fastapi==0.137.1",
  "uvicorn[standard]>=0.34,<0.35",
  "sqlalchemy>=2.0,<2.1",
  "asyncpg>=0.29,<1.0",
  "aiosqlite>=0.20,<1.0",
  "alembic>=1.13,<2.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "apscheduler>=3.10,<4.0",
  "python-jose[cryptography]>=3.3,<4.0",
  "passlib[bcrypt]>=1.7.4,<2.0",
  "bcrypt>=3.2,<4.1",
  "structlog>=24,<27",
  "prometheus-client>=0.20,<0.22",
  "httpx>=0.27,<1.0",
  "pyyaml>=6.0,<7.0",
  "python-multipart>=0.0.9",
  # spinor_submit (Phase A adapter) is installed alongside via
  # `pip install -e ../../spinor/submit/python` (or COPY in the
  # Dockerfile). It is optional at import time — local provider
  # works without it.
]

[project.optional-dependencies]
test = [
  "pytest>=8.2,<10",
  "pytest-asyncio>=0.23,<1.0",
  "pytest-cov>=5.0,<7.0",
  "freezegun>=1.5,<2.0",
  "respx>=0.21,<1.0",
  "testcontainers[postgres]>=4.5,<5.0",
]

[project.scripts]
jobsvc = "jobsvc.main:run"
jobsvc-worker = "jobsvc.worker:run"

[project.urls]
Homepage = "https://nimesh08.github.io/quantum-stack/"
Repository = "https://github.com/nimesh08/quantum-stack"
Documentation = "https://nimesh08.github.io/quantum-stack/"
Issues = "https://github.com/nimesh08/quantum-stack/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { file = ["../../VERSION"] }

[tool.setuptools.package-data]
jobsvc = ["alembic.ini", "_alembic/**/*.py", "_alembic/script.py.mako", "static/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
  "integration: requires a running Postgres",
  "regression: frozen end-to-end behaviour",
]
