[project]
name = "heisenberg"
description = "Heisenberg Quantum Stack — single-command launcher (jobsvc + worker + scheduler + playground SPA)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Nimesh Cheedella", email = "chnimesh0808@gmail.com" }]
keywords = ["quantum", "compiler", "fastapi", "spinor", "phonon", "photon", "heisenberg"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version"]

dependencies = [
  "jobsvc",
  "calibration",
  "spinor-submit",
  "uvicorn[standard]>=0.34,<0.35",
  "httpx>=0.27,<1.0",
  "click>=8.1,<9.0",
  "rich>=13.7,<15.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29,<1.0"]
test = [
  "pytest>=8.2,<10",
  "pytest-asyncio>=0.23,<2.0",
]

[project.scripts]
heisenberg = "heisenberg.cli:main"

[project.urls]
Homepage = "https://nimesh08.github.io/quantum-stack/"
Repository = "https://github.com/nimesh08/quantum-stack"
Documentation = "https://nimesh08.github.io/quantum-stack/"
Issues = "https://github.com/nimesh08/quantum-stack/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { file = ["../../VERSION"] }

[tool.setuptools.package-data]
heisenberg = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
